--- a/LocalAiDemo/LocalAiDemo/wwwroot/index.html
+++ b/LocalAiDemo/LocalAiDemo/wwwroot/index.html
@@ -6,6 +6,7 @@
     <title>LocalAiDemo</title>
     <base href="/" />
     <link rel="stylesheet" href="_content/LocalAiDemo.Shared/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="_content/LocalAiDemo.Shared/app.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="LocalAiDemo.styles.css" />
@@ -19,7 +20,5 @@
     <div id="app">Loading...</div>
 
     <script src="_framework/blazor.webview.js" autostart="false"></script>
-
 </body>
-
 </html>
