Zwischenstand STT, TTS working

--- a/LocalAiDemo/LocalAiDemo/wwwroot/index.html
+++ b/LocalAiDemo/LocalAiDemo/wwwroot/index.html
@@ -17,8 +17,8 @@
 
     <div class="status-bar-safe-area"></div>
 
-    <div id="app">Loading...</div>
-
-    <script src="_framework/blazor.webview.js" autostart="false"></script>
+    <div id="app">Loading...</div>    <script src="_framework/blazor.webview.js" autostart="false"></script>
+    <script src="_content/LocalAiDemo.Shared/speech-recognition.js"></script>
+    <script src="_content/LocalAiDemo.Shared/whisper-recording.js"></script>
 </body>
 </html>
